--- a/PingPong_404/frmGame.resx
+++ b/PingPong_404/frmGame.resx
@@ -205,4 +205,7 @@
         W6ZllxgyyHl3P1P5DA7UUAdBXIx+CNDT4sS+LVtsao1iIi3G3OSu/GPv7QFznpRRQB11FFFAH//Z
 </value>
   </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>32</value>
+  </metadata>
 </root>
