--- a/PingPong_404/Properties/Resources.resx
+++ b/PingPong_404/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="links" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\links.JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Rangliste" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Rangliste.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="rechts" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\rechts.JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
